--- a/external_libs/CMakeLists.txt
+++ b/external_libs/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(graph_hash)
 
 add_subdirectory(Hash_Table)
-add_subdirectory(Linked_List)
+#add_subdirectory(Linked_List) => B/C STACK IMPORTS THE LINKED LIST MODULE TOOO!!!!!
+add_subdirectory(Stack)
