--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,4 +4,4 @@ set(EXECUTABLE_OUTPUT_PATH ../)
 
 add_executable(test test.cpp)
 
-target_link_libraries(test PRIVATE graph hash_table linked_list)
+target_link_libraries(test PRIVATE graph hash_table linked_list stack)
